	for undeclared packages).

	This check is now also available on Windows.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item C entry points \code{mkChar} and \code{mkCharCE} now check
      that the length of the string they are passed does not exceed
      \eqn{2^{31}-1}{2^31-1} bytes: they used to overflow with
      unpredictable consequences.
    }
  }

  \subsection{WINDOWS-SPECIFIC CHANGES}{
    \itemize{
      \item Windows-specific changes will now be announced in this file
      (\file{NEWS}).  Changes up and including \R 2.15.0 remain in the
      \file{CHANGES} file.

      \item There are two new environment variables which
      control the defaults for command-line options.

      If \env{R_WIN_INTERNET2} is set to a non-empty value, it is as if
      \option{--internet2} was used.

      If \env{R_MAX_MEM_SIZE} is set, it gives the default memory limit
      if \option{--max-mem-size} is not specified: invalid values being
      ignored.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{lsfit()} lost the names from the residuals.

      \item More cases in which \code{merge()} could create a data frame
      with duplicate column names now give warnings.  Cases where
      names specified in \code{by} match multiple columns are errors.

      \item Nonsense uses such as \code{seq(1:50, by = 5)} (from package
      \CRANpkg{plotrix}) and \code{seq.int(1:50, by = 5)} are now errors.

      \item The residuals in the 5-number summary printed by
      \code{summary()} on an \code{"lm"} object are now explicitly
      labelled as weighted residuals when non-constant weights are
      present.  (Wish of \PR{14840}.)

      \item \code{tracemem()} reported that all objects were copied
      by \code{.C()} or \code{.Fortran()} whereas only some object types
      were ever copied.

      \item The \code{plot()} method for class \code{"stepfun"} only